fix: slide freeze on firefox

--- a/src/scss/pages/index/intro.scss
+++ b/src/scss/pages/index/intro.scss
@@ -1,6 +1,7 @@
 .intro {
   position: relative;
   height: 100vh;
+  height: 100dvh;
 
   &__image-slider {
     position: absolute;
